MGS-6559 (FIX) Incorrect word wrapping in Rent Increase form summary

--- a/repository-data/webfiles/src/main/scss/mygov/components/_summary-table.scss
+++ b/repository-data/webfiles/src/main/scss/mygov/components/_summary-table.scss
@@ -54,9 +54,6 @@
         text-align: right !important;
     }
 
-    .summary__user-input {
-        word-break: break-all;
-    }
 }
 
 .summary-list {
